package ec.edu.uteq.backend.repository;

import ec.edu.uteq.backend.entity.Escenario;
import org.springframework.data.jpa.repository.JpaRepository;

public interface EscenarioRepository extends JpaRepository<Escenario, Long> {

}