package ec.edu.uteq.backend.repository;

import ec.edu.uteq.backend.entity.Simulacion;
import org.springframework.data.jpa.repository.JpaRepository;

public interface SimulacionRepository extends JpaRepository<Simulacion, Long> {

}